front-end/src/app/job-description/job-description.component.css
.btn-login {
  background: #de6262;
  color: #fff;
  font-weight: 600;
}

a {
  color: white;
  /* text-decoration: none; */
  background-color: transparent;
}
.close-button {
  float: right;
  top: -24px;
  right: -24px;
}

.close-icon {
    float: right;
  }

